add nicer status indications
